k8s/base/somleng-scheduler.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: somleng-scheduler
  namespace: somleng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: somleng-scheduler
  template:
    metadata:
      labels:
        app: somleng-scheduler
    spec:
      containers:
        - name: somleng-scheduler
          image: localsip/somleng:latest
          imagePullPolicy: Always
          command: ["/bin/sh", "-c", "while true; do bundle exec rails runner 'PerMinuteJob.perform_later'; sleep 60; done"]
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
