k8s/base/rating-engine.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-engine
  namespace: somleng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating-engine
  template:
    metadata:
      labels:
        app: rating-engine
    spec:
      containers:
        - name: rating-engine
          image: localsip/rating-engine:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 2080
          readinessProbe:
            exec:
              command: ["/usr/local/bin/docker-healthcheck.sh"]
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rating-engine
  namespace: somleng
spec:
  selector:
    app: rating-engine
  ports:
    - port: 2080
      targetPort: 2080
