k8s/base/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: somleng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: somleng
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
