k8s/base/somleng-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: somleng-api
  namespace: somleng
spec:
  replicas: 2
  selector:
    matchLabels:
      app: somleng-api
  template:
    metadata:
      labels:
        app: somleng-api
    spec:
      containers:
        - name: somleng-api
          image: localsip/somleng:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          command: ["./bin/rails", "server", "-b", "0.0.0.0", "-e", "production"]
          readinessProbe:
            httpGet:
              path: /health_checks
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health_checks
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: somleng-api
  namespace: somleng
spec:
  selector:
    app: somleng-api
  ports:
    - port: 3000
      targetPort: 3000
