k8s/base/somleng-switch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: somleng-switch
  namespace: somleng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: somleng-switch
  template:
    metadata:
      labels:
        app: somleng-switch
    spec:
      containers:
        - name: somleng-switch
          image: localsip/switch:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: sip-gateways
              mountPath: /sip_gateways
          readinessProbe:
            httpGet:
              path: /health_checks
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: sip-gateways
          persistentVolumeClaim:
            claimName: sip-gateways
---
apiVersion: v1
kind: Service
metadata:
  name: somleng-switch
  namespace: somleng
spec:
  selector:
    app: somleng-switch
  ports:
    - port: 8080
      targetPort: 8080
